fixed author info sklearn transformer

--- a/Feature_Design/bert.ipynb
+++ b/Feature_Design/bert.ipynb
@@ -190,7 +190,9 @@
    "outputs": [],
    "source": [
     "col = 'title'\n",
-    "#col = 'selftext' # this results in strings that are too long for the model ... TODOL how to fix this?\n",
+    "#col = 'selftext' # this results in strings that are too long for the model ... TODO7 how to fix this?\n",
+    "# maybe truncation is okay, ... maybe the first 400 and last time 112?\n",
+    "\n",
     "df = df.dropna(subset = [col])"
    ]
   },
@@ -312,9 +314,6 @@
    "source": [
     "def test_classification(features, bin_labels, model = LogisticRegression()):\n",
     "\n",
-    "    #train_features, test_features, train_labels, test_labels = train_test_split(features, bin_labels)\n",
-    "    #model.fit(train_features, train_labels)\n",
-    "    #model.score(test_features, test_labels)\n",
     "    \n",
     "    clf = DummyClassifier()\n",
     "    scores = cross_val_score(clf, features, bin_labels)\n",
