fixed api compliance of transformer

--- a/Feature_Design/testing_custom_transformers.ipynb
+++ b/Feature_Design/testing_custom_transformers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c5bb9d47",
+   "id": "0153c491",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,21 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f7531b41",
+   "execution_count": 62,
+   "id": "88a74ca2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../Data/wsb_cleaned.csv\", nrows=10000)\n",
+    "df = pd.read_csv(\"../Data/wsb_cleaned.csv\", nrows = 10000)\n",
     "\n",
-    "\n",
+    "df = df.loc[df.author != \"None\"]\n",
     "#df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0dc6e22e",
+   "execution_count": 63,
+   "id": "1c50097b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "01742490",
-   "metadata": {},
+   "execution_count": 71,
+   "id": "e1412ff1",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "finished with mean\n",
       "finished with sum\n",
+      "finished with mean\n",
       "finished with median\n",
       "finished with count\n"
      ]
@@ -77,43 +79,21 @@
        "      <th>title</th>\n",
        "      <th>id</th>\n",
        "      <th>ups</th>\n",
-       "      <th>auth_aggmean</th>\n",
-       "      <th>auth_aggsum</th>\n",
-       "      <th>auth_aggmedian</th>\n",
-       "      <th>auth_aggcount</th>\n",
+       "      <th>aggsum</th>\n",
+       "      <th>aggmean</th>\n",
+       "      <th>aggmedian</th>\n",
+       "      <th>aggcount</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>None</td>\n",
-       "      <td>Good time to get on $BLUE</td>\n",
-       "      <td>eipxnr</td>\n",
-       "      <td>6</td>\n",
-       "      <td>27.472254</td>\n",
-       "      <td>118323</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4307</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>None</td>\n",
-       "      <td>i wanna buy a call but i don't want to bet too...</td>\n",
-       "      <td>eipxm4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>27.472254</td>\n",
-       "      <td>118323</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4307</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>unclerudy</td>\n",
        "      <td>Buy INTU - DD</td>\n",
        "      <td>eipw3g</td>\n",
        "      <td>5</td>\n",
-       "      <td>3.750000</td>\n",
        "      <td>15</td>\n",
+       "      <td>3.750000</td>\n",
        "      <td>4.5</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -123,8 +103,8 @@
        "      <td>If you thought your 2019 was bad, at least you...</td>\n",
        "      <td>eipusd</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -134,10 +114,32 @@
        "      <td>I will remember</td>\n",
        "      <td>eipn7c</td>\n",
        "      <td>11</td>\n",
-       "      <td>3.000000</td>\n",
        "      <td>15</td>\n",
+       "      <td>3.000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Hobbstc</td>\n",
+       "      <td>CHWY to the moon!</td>\n",
+       "      <td>eipbic</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>DrSecret007</td>\n",
+       "      <td>New Years Challenge: 5K Make-it or Break-it</td>\n",
+       "      <td>eipbbd</td>\n",
+       "      <td>50</td>\n",
+       "      <td>50</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -151,15 +153,37 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9995</th>\n",
-       "      <td>None</td>\n",
-       "      <td>New WallStreetBets Friday Beers Like Instagram...</td>\n",
-       "      <td>ewdfia</td>\n",
+       "      <th>9990</th>\n",
+       "      <td>gameztheory</td>\n",
+       "      <td>Quick IBM Roast</td>\n",
+       "      <td>ewdh5k</td>\n",
+       "      <td>6</td>\n",
+       "      <td>40</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9993</th>\n",
+       "      <td>montclearman</td>\n",
+       "      <td>SPY 2/5 $330 Calls All Day</td>\n",
+       "      <td>ewdfzu</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>27.472254</td>\n",
-       "      <td>118323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9994</th>\n",
+       "      <td>omgoptions</td>\n",
+       "      <td>I have weak hands. Sold 6 of 9 2100 calls 2/7 ...</td>\n",
+       "      <td>ewdfml</td>\n",
+       "      <td>1</td>\n",
+       "      <td>39</td>\n",
+       "      <td>4.333333</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>4307</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9996</th>\n",
@@ -167,8 +191,8 @@
        "      <td>Why Asian Markets Rallied After WHO Announcement</td>\n",
        "      <td>ewddnz</td>\n",
        "      <td>39</td>\n",
-       "      <td>58.800000</td>\n",
        "      <td>882</td>\n",
+       "      <td>58.800000</td>\n",
        "      <td>29.0</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
@@ -178,69 +202,47 @@
        "      <td>WallStreetBets: How Boomers Made the World's B...</td>\n",
        "      <td>ewdd5x</td>\n",
        "      <td>1857</td>\n",
-       "      <td>1124.500000</td>\n",
        "      <td>2249</td>\n",
+       "      <td>1124.500000</td>\n",
        "      <td>1124.5</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>None</td>\n",
-       "      <td>How FUCKED Am I? V/YANG/FXI puts &lt; Fucking Ret...</td>\n",
-       "      <td>ewdc8l</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27.472254</td>\n",
-       "      <td>118323</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4307</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>None</td>\n",
-       "      <td>Monthly AMD Su Bae Worship Thread</td>\n",
-       "      <td>ewd9e0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27.472254</td>\n",
-       "      <td>118323</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4307</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10000 rows × 8 columns</p>\n",
+       "<p>5693 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "            author                                              title      id  \\\n",
-       "0             None                          Good time to get on $BLUE  eipxnr   \n",
-       "1             None  i wanna buy a call but i don't want to bet too...  eipxm4   \n",
        "2        unclerudy                                      Buy INTU - DD  eipw3g   \n",
        "3           bd_one  If you thought your 2019 was bad, at least you...  eipusd   \n",
        "4          IpMedia                                    I will remember  eipn7c   \n",
+       "6          Hobbstc                                  CHWY to the moon!  eipbic   \n",
+       "7      DrSecret007        New Years Challenge: 5K Make-it or Break-it  eipbbd   \n",
        "...            ...                                                ...     ...   \n",
-       "9995          None  New WallStreetBets Friday Beers Like Instagram...  ewdfia   \n",
+       "9990   gameztheory                                    Quick IBM Roast  ewdh5k   \n",
+       "9993  montclearman                         SPY 2/5 $330 Calls All Day  ewdfzu   \n",
+       "9994    omgoptions  I have weak hands. Sold 6 of 9 2100 calls 2/7 ...  ewdfml   \n",
        "9996  LiquidityMan   Why Asian Markets Rallied After WHO Announcement  ewddnz   \n",
        "9997        jartek  WallStreetBets: How Boomers Made the World's B...  ewdd5x   \n",
-       "9998          None  How FUCKED Am I? V/YANG/FXI puts < Fucking Ret...  ewdc8l   \n",
-       "9999          None                  Monthly AMD Su Bae Worship Thread  ewd9e0   \n",
        "\n",
-       "       ups  auth_aggmean  auth_aggsum  auth_aggmedian  auth_aggcount  \n",
-       "0        6     27.472254       118323             1.0           4307  \n",
-       "1        0     27.472254       118323             1.0           4307  \n",
-       "2        5      3.750000           15             4.5              4  \n",
-       "3        1      1.000000            1             1.0              1  \n",
-       "4       11      3.000000           15             1.0              5  \n",
-       "...    ...           ...          ...             ...            ...  \n",
-       "9995     1     27.472254       118323             1.0           4307  \n",
-       "9996    39     58.800000          882            29.0             15  \n",
-       "9997  1857   1124.500000         2249          1124.5              2  \n",
-       "9998     1     27.472254       118323             1.0           4307  \n",
-       "9999     1     27.472254       118323             1.0           4307  \n",
+       "       ups  aggsum      aggmean  aggmedian  aggcount  \n",
+       "2        5      15     3.750000        4.5         4  \n",
+       "3        1       1     1.000000        1.0         1  \n",
+       "4       11      15     3.000000        1.0         5  \n",
+       "6        1       1     1.000000        1.0         1  \n",
+       "7       50      50    50.000000       50.0         1  \n",
+       "...    ...     ...          ...        ...       ...  \n",
+       "9990     6      40    20.000000       20.0         2  \n",
+       "9993    12      12    12.000000       12.0         1  \n",
+       "9994     1      39     4.333333        1.0         9  \n",
+       "9996    39     882    58.800000       29.0        15  \n",
+       "9997  1857    2249  1124.500000     1124.5         2  \n",
        "\n",
-       "[10000 rows x 8 columns]"
+       "[5693 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,11 +250,11 @@
    "source": [
     "\n",
     "\n",
-    "for summary_type in ['mean', 'sum', 'median', 'count' ]:\n",
+    "for summary_type in ['sum', 'mean', 'median', 'count' ]:\n",
     "    pop_agg = author_influence()\n",
     "    pop_agg.kind = summary_type\n",
     "    pop_agg.fit(df)\n",
-    "    df = pop_agg.transform(df)\n",
+    "    df[\"agg\" + summary_type] = pop_agg.transform(df)\n",
     "    print(\"finished with\", summary_type)\n",
     "    \n",
     "df"
@@ -260,8 +262,216 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "id": "9614c049",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['author', 'title', 'id' , 'ups']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ffc22ceb",
+   "id": "968aa755",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "2c54ad05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import FeatureUnion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "51dedb7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(df[['author', 'ups']], df.ups,\n",
+    "                                                    random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "6b0b1708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "author_stat_transformer = FeatureUnion([('aggsum', author_influence(kind = 'sum')), \n",
+    "                           ('aggmean', author_influence(kind = 'mean')), \n",
+    "                           ('aggmedian', author_influence(kind = 'median')),\n",
+    "                            ('aggcount', author_influence(kind = 'count'))\n",
+    "                           \n",
+    "                           ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "d391b9c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>3.750000</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5688</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5689</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5690</th>\n",
+       "      <td>39.0</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5691</th>\n",
+       "      <td>882.0</td>\n",
+       "      <td>58.800000</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5692</th>\n",
+       "      <td>2249.0</td>\n",
+       "      <td>1124.500000</td>\n",
+       "      <td>1124.5</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5693 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0            1       2     3\n",
+       "0       15.0     3.750000     4.5   4.0\n",
+       "1        1.0     1.000000     1.0   1.0\n",
+       "2       15.0     3.000000     1.0   5.0\n",
+       "3        1.0     1.000000     1.0   1.0\n",
+       "4       50.0    50.000000    50.0   1.0\n",
+       "...      ...          ...     ...   ...\n",
+       "5688    40.0    20.000000    20.0   2.0\n",
+       "5689    12.0    12.000000    12.0   1.0\n",
+       "5690    39.0     4.333333     1.0   9.0\n",
+       "5691   882.0    58.800000    29.0  15.0\n",
+       "5692  2249.0  1124.500000  1124.5   2.0\n",
+       "\n",
+       "[5693 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "author_stat_transformer\n",
+    "author_stat_transformer.fit(df)\n",
+    "pd.DataFrame(author_stat_transformer.transform(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67933a09",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -269,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "972cef2a",
+   "id": "0a27d6d9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -277,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de182aff",
+   "id": "3580780a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -285,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9770c3fd",
+   "id": "43abb832",
    "metadata": {},
    "outputs": [],
    "source": []
