added time and author stats features

--- a/DataGathering/CleaningWSBData.ipynb
+++ b/DataGathering/CleaningWSBData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,176 +44,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_2021 = pd.read_pickle(\"../Data/2021wsb.pkl\")\n",
     "df_2020 = pd.read_pickle(\"../Data/2020wsb.pkl\")\n",
-    "subreddit_df = df_2020.append(df_2021)"
+    "subreddit_df = df_2020.append(df_2021)\n",
+    "\n",
+    "subreddit_df = subreddit_df [subreddit_df.removed_by_category.isnull()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subdf = subreddit_df[['title', 'ups', 'num_comments', 'stickied']]"
+    "#subdf = subreddit_df[['title', 'ups', 'num_comments', 'stickied']]\n",
+    " #subdf[subdf.title.str.contains('Weekly')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>ups</th>\n",
-       "      <th>num_comments</th>\n",
-       "      <th>stickied</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>954</th>\n",
-       "      <td>Weekly Tendies Thread - January 04, 2020</td>\n",
-       "      <td>6</td>\n",
-       "      <td>16</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1021</th>\n",
-       "      <td>Weekly Theta Gang Thread</td>\n",
-       "      <td>33</td>\n",
-       "      <td>78</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3050</th>\n",
-       "      <td>Weekly Tendies Thread - January 11, 2020</td>\n",
-       "      <td>4</td>\n",
-       "      <td>17</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3139</th>\n",
-       "      <td>From $1000 to ? Trading SPX Weeklys in my Roth</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3199</th>\n",
-       "      <td>Weekly Theta Gang Thread</td>\n",
-       "      <td>21</td>\n",
-       "      <td>45</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>949873</th>\n",
-       "      <td>The Weekly Market Recap for Gamblers and Degen...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>949877</th>\n",
-       "      <td>The Weekly Market Recap for Gamblers and Degen...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>949881</th>\n",
-       "      <td>The Weekly Market Recap for Gamblers and Degen...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>953338</th>\n",
-       "      <td>Felt a bit Bear-Curious $X Weekly Put</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>954766</th>\n",
-       "      <td>Forex Weekly Breakdown</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>313 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                    title  ups  num_comments  \\\n",
-       "954              Weekly Tendies Thread - January 04, 2020    6            16   \n",
-       "1021                             Weekly Theta Gang Thread   33            78   \n",
-       "3050             Weekly Tendies Thread - January 11, 2020    4            17   \n",
-       "3139       From $1000 to ? Trading SPX Weeklys in my Roth    1             0   \n",
-       "3199                             Weekly Theta Gang Thread   21            45   \n",
-       "...                                                   ...  ...           ...   \n",
-       "949873  The Weekly Market Recap for Gamblers and Degen...    1             0   \n",
-       "949877  The Weekly Market Recap for Gamblers and Degen...    1             0   \n",
-       "949881  The Weekly Market Recap for Gamblers and Degen...    1             0   \n",
-       "953338              Felt a bit Bear-Curious $X Weekly Put    1             1   \n",
-       "954766                             Forex Weekly Breakdown    1             1   \n",
-       "\n",
-       "        stickied  \n",
-       "954        False  \n",
-       "1021       False  \n",
-       "3050       False  \n",
-       "3139       False  \n",
-       "3199       False  \n",
-       "...          ...  \n",
-       "949873     False  \n",
-       "949877     False  \n",
-       "949881     False  \n",
-       "953338     False  \n",
-       "954766     False  \n",
-       "\n",
-       "[313 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "subdf[subdf.title.str.contains('Weekly')]"
+    "subreddit_df.reset_index()\n",
+    "\n",
+    "subreddit_df[\"selftext\"] = subreddit_df[\"selftext_html\"].apply(extract_text)\n",
+    "\n",
+    "subreddit_df[\"created_datetime_utc\"] = subreddit_df[\"created_utc\"].apply(date)\n",
+    "datetime.utcfromtimestamp(created)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subreddit_df.to_csv(\"../Data/wsb_full_not_deleted_withdt.csv\")"
    ]
   },
   {
@@ -223,10 +95,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
-    "subreddit_df[\"selftext\"] = subreddit_df[\"selftext_html\"].apply(extract_text)\n",
-    "\n",
-    "subreddit_df[\"created_datetime_utc\"] = subreddit_df[\"created_utc\"].apply(date)\n",
     "\n",
     "cols = [ 'title',  'author',  \"created_datetime_utc\",  'selftext', 'url',  'upvote_ratio',  'ups', 'total_awards_received',  'num_comments', 'num_crossposts' ,'is_self',  'is_video', 'media_only', 'id',  'created_utc','selftext_html', 'author_fullname',]\n",
     "subreddit_cleaned = subreddit_df[cols]\n",
