made new clustering doc

--- a/Regression/all_features.ipynb
+++ b/Regression/all_features.ipynb
@@ -565,7 +565,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "time_features = make_union( make_column_transformer(  (FunctionTransformer(lambda x : x), [\"weektime\", \"time_of_day\"] ),\n",
+    "time_features = make_union( make_column_transformer(  \n",
+    "                                (FunctionTransformer(lambda x : x), [\"weektime\", \"time_of_day\"] ),\n",
     "                                                   )            \n",
     "                          )\n",
     "\n",
@@ -579,7 +580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#nlp_features = FeatureUnion([])"
+    "nlp_features = FeatureUnion([])"
    ]
   },
   {
